# src/api/dto/order.go
@@ -1,0 +1,9 @@
+package dto
+
+type CheckoutRequest struct {
+	ShippingAddress string `json:"shippingAddress" binding:"required"`
+}
+
+type CheckoutResponse struct {
+	PaymentGatewayUrl string `json:"paymentGatewayUrl" binding:"required"`
+}
